Make some elements not mandatory, do a degradable code
Create graphic themes #56

--- a/src/themes/default/template.html
+++ b/src/themes/default/template.html
@@ -26,7 +26,7 @@
 			<div id="about">
 				<div id="titleline">
 					<h5 id="title"><a href="#" id="canonical" aria-label="${__.canonical}"><!-- title of the song --></a></h5>
-					<a id="elapse" aria-label="${__.moment}" tabindex="-1"><span>…<!-- elapsed time --></span><span class="nosmaller"><!-- total time --></span></a>
+					<a id="elapse" aria-label="${__.moment}" tabindex="-1"><span id="currenttime">…<!-- elapsed time --></span><span id="totaltime" class="nosmaller"><!-- total time --></span></a>
 				</div>
 				<div id="handheld-nav">
 					<!-- this navigation panel appears when you press for more than 400ms on the timeline. It helps to have a fine position on smartphones -->
