Make shadow #poster #actions #back #restart #fastreward #reward #foward #fastfoward  non-mandatory
Create graphic themes #56

--- a/src/themes/direct-download/template.html
+++ b/src/themes/direct-download/template.html
@@ -89,13 +89,9 @@
 			</a>
 		</section>
 		<!--
-			We move apart the unnecessary elements in a class="no" container, to hide them.
-			This segment is still unavoidable, to permit the core code to still work.
+			If we need to move apart unnecessary elements, but still required, we would put them in a class="no" container, to hide them.
+			This segment would be still unavoidable to the users and permit the core code to still work.
 		-->
-		<section id="pageshare" class="no">
-			<button id="actions"></button>
-			<a id="back"></a>
-		</section>
 	</main>
 </div>
 <style>
