--- a/src/themes/direct-download/template.html
+++ b/src/themes/direct-download/template.html
@@ -95,7 +95,21 @@
 	</main>
 </div>
 <style>
-	/* Not the recommended way, but I didn't want to copy the whole scoped.css for invalidate only one rule */
-	#link { background : var(--cpu-background) !important; }
-	#link:hover, #link:focus { background: var(--cpu-focus-background, var(--cpu-color)) !important; }
+	/* Not the recommended way, but I didn't want to copy the whole scoped.css for invalidate only one^w a couple of rules */
+	#link {
+		background : none !important;,
+		flex : 0 0 var(--cpu-height);
+		width : var(--cpu-height);
+		max-height : var(--cpu-height);
+		height : 100%;
+		text-align : center;
+		vertical-align : middle;
+	}
+	#link svg {
+		max-width: 100%;
+		max-height: 100%;
+	}
+	#link:hover, #link:focus {
+		background: var(--cpu-focus-background, var(--cpu-color)) !important;
+	}
 </style>
