aria-label on #control button
Enhance a11y on focus and buttons #116

--- a/src/themes/default/template.html
+++ b/src/themes/default/template.html
@@ -7,18 +7,18 @@
 		<section id="pagemain">
 			<button type="button" id="control" tabindex="0">
 				<!-- play / pause / loading -->
-				<svg id="loading" aria-label="${__.loading}" viewBox="0 0 32 32" aria-hidden="true">
+				<svg id="loading" viewBox="0 0 32 32">
 					<title>${__.loading}</title>
 					<circle cx="6" cy="22" r="4" />
 					<circle cx="16" cy="22" r="4" />
 					<circle cx="26" cy="22" r="4" />
 				</svg>
-				<svg id="play" aria-label="${__.pause}" viewBox="0 0 32 32" aria-hidden="true">
+				<svg id="pause" viewBox="0 0 32 32">
 					<title>${__.pause}</title>
 					<path d="M 6,6 12.667,6 12.667,26 6,26 z" />
 					<path d="M 19.333,6 26,6 26,26 19.333,26 z" />
 				</svg>
-				<svg id="pause" aria-label="${__.play}" viewBox="0 0 32 32" aria-hidden="true">
+				<svg id="play" viewBox="0 0 32 32">
 					<title>${__.play}</title>
 					<path d="M 6,6 6,26 26,16 z" />
 				</svg>
