Return link on panel actions didn't work on keyboard
Enhance a11y on focus and buttons #116

--- a/src/themes/default/template.html
+++ b/src/themes/default/template.html
@@ -116,7 +116,7 @@
 				</svg>
 				<span class="nosmall">${__.download}</span>
 			</a>
-			<a id="back" aria-label="${__.back}" title="${__.back}">
+			<a href="#" id="back" aria-label="${__.back}" title="${__.back}">
 				<svg viewBox="0 0 32 32" aria-hidden="true">
 					<path d="M 9,8 24,23 23,24 8,9 z" />
 					<path d="M 9,24 24,9 23,8 8,23 z" />
