a11y label on progressbar
Enhance a11y on focus and buttons #116

--- a/src/themes/default/template.html
+++ b/src/themes/default/template.html
@@ -67,7 +67,7 @@
 				<div id="line">
 					<div id="time">
 						<!-- time progression bar -->
-						<div id="loadingline" role="progressbar"></div>
+						<div id="loadingline" role="progressbar" aria-labelledby="popup"></div>
 						<time id="popup">--:--</time>
 					</div>
 					<!-- here are inserted tracks for _chapters, cursors,… -->
