--- a/src/themes/direct-download/template.html
+++ b/src/themes/direct-download/template.html
@@ -70,7 +70,7 @@
 				</div>
 				<div id="line">
 					<div id="time">
-						<div id="loadingline" role="progressbar"></div>
+						<div id="loadingline" role="progressbar" aria-labelledby="popup"></div>
 						<time id="popup">--:--</time>
 					</div>
 				</div>
