Avoid dezoomed viewport in smartphones

--- a/examples/API_insert_annotations.html
+++ b/examples/API_insert_annotations.html
@@ -2,6 +2,7 @@
 <html>
 <meta charset="UTF-8" />
 <title>CPU-Audio API example : insert annotations</title>
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
 <script>
 // In this example, we will create custom time annotations in the player
