--- a/examples/Style_highlight_page_chapters.html
+++ b/examples/Style_highlight_page_chapters.html
@@ -2,6 +2,8 @@
 <html>
     <meta charset="UTF-8" />
     <title>CPU-Audio API example : Highlight page chapters</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
 
     <script src="../build/cpu-audio.js" async></script>
     <style>
