--- a/examples/API_insert_downloadables_panel.html
+++ b/examples/API_insert_downloadables_panel.html
@@ -2,7 +2,7 @@
 <html>
 <meta charset="UTF-8" />
 <title>CPU-Audio API example : insert annotations</title>
-
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <script>
 /** 
     In this example, we will create a panel with numerous downloadable versions of the same audio.
