--- a/examples/Build_with_download_action.html
+++ b/examples/Build_with_download_action.html
@@ -2,6 +2,7 @@
 <html>
 <meta charset="UTF-8" />
 <title>CPU-Audio theme example : direct download instead of action button</title>
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
 <script src="../build/cpu-audio.direct-download.js" async></script>
 
