--- a/examples/Style_highlight_page_chapters.html
+++ b/examples/Style_highlight_page_chapters.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <meta charset="UTF-8" />
-    <title>CPU-Audio API example : Highlight page chapters</title>
+    <title>CPU-Audio style example : Highlight page chapters</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
 
