--- a/examples/controller_playlist_and_chapters.html
+++ b/examples/controller_playlist_and_chapters.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+	<title>CPU-Audio Interface example : A CPU-Controller with playlists and chapters</title>
 
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 	<script src="../build/cpu-audio.js"></script>
 
 	<style>
