--- a/examples/API_insert_annotations.html
+++ b/examples/API_insert_annotations.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <meta charset="UTF-8" />
-<title>CPU-Audio API example : insert annotations</title>
+<title>CPU-Audio API example : Insert annotations in panels</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
 <script>
