--- a/examples/API_insert_downloadables_panel.html
+++ b/examples/API_insert_downloadables_panel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <meta charset="UTF-8" />
-<title>CPU-Audio API example : insert annotations</title>
+<title>CPU-Audio API example : Insert downloadable links in panel</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <script>
 /** 
