--- a/examples/Style_backgrounds.html
+++ b/examples/Style_backgrounds.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <meta charset="UTF-8" />
-<title>CPU-Audio API example : styling background</title>
+<title>CPU-Audio style example : Styling background</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
 <script src="../build/cpu-audio.js" async></script>
