--- a/examples/iframe_for_dimension.html
+++ b/examples/iframe_for_dimension.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<meta charset="utf-8">
+	<title>CPU-Audio Interface example : Constraigned size via iframe</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 	<script src="../build/cpu-audio.js"></script>
 	<style type="text/css">body {background : #bbb;}</style>
