Titles on application

--- a/applications/live_config.html
+++ b/applications/live_config.html
@@ -1,3 +1,4 @@
+<title>CPU-Audio application : Configuration of the player</title>
 <script src="../build/cpu-audio.js" async></script>
 <link rel="stylesheet" href="../src/global.css" />
 
