--- a/applications/live_config.html
+++ b/applications/live_config.html
@@ -2,6 +2,9 @@
 <script src="../build/cpu-audio.js" async></script>
 <link rel="stylesheet" href="../src/global.css" />
 
+<p><a href="../examples.html">← back to examples list</a></p>
+<h1>CPU-Audio configuration of the player</h1>
+
 <div id="demo">
 <cpu-audio 
 	title="Choose an URL for source and give it a title">
