--- a/examples/API_insert_annotations.html
+++ b/examples/API_insert_annotations.html
@@ -133,6 +133,9 @@ document.addEventListener('CPU_ready', e => {
 <script src="../build/cpu-audio.js" async></script>
 
 <body>
+<p><a href="../examples.html">← back to examples list</a></p>
+<h1 id="highlighting-text-amond-chapters">CPU-Audio API example : Insert annotations in panels</h1>
+
 <cpu-audio 
     title="Enjoy the silence">
     <audio controls id="sound">
