--- a/examples/API_insert_downloadables_panel.html
+++ b/examples/API_insert_downloadables_panel.html
@@ -43,6 +43,9 @@ document.addEventListener('CPU_ready', ({target}) => {
 <script src="../build/cpu-audio.js" async></script>
 
 <body>
+<p><a href="../examples.html">← back to examples list</a></p>
+<h1 id="highlighting-text-amond-chapters">CPU-Audio API example : Insert downloadable links in panel</h1>
+
     <cpu-audio title="Ex0157 Web, State of the art 2021" canonical="https://cpu.dascritch.net/post/2021/03/11/Ex0157-Web%2C-State-of-the-art-2021" poster="https://cpu.dascritch.net/public/Images/Emissions/.1902-Ex0103-WebStateOfTheArt_s.png" waveform="https://cpu.dascritch.net/public/Sonores/Emissions/waveforms/0157-CPU%2811-03-21%29.png">
         <audio controls="controls" id="emission-0157">
             <!-- This source is not downloadable -->
