--- a/examples/Style_highlight_page_chapters.html
+++ b/examples/Style_highlight_page_chapters.html
@@ -49,7 +49,9 @@
 
 <body>
 
-<h1 id="highlighting-text-amond-chapters">Highlighting text amond chapters</h1>
+<p><a href="../examples.html">← back to examples list</a></p>
+
+<h1 id="highlighting-text-amond-chapters">CPU-Audio Style example : Highlighting text amond chapters</h1>
 
 <p>In this example, elements of the host page are highlighted when the player show some chapters, with only CSS and HTML.</p>
 <p>
