--- a/examples/controller_playlist_and_chapters.html
+++ b/examples/controller_playlist_and_chapters.html
@@ -11,11 +11,14 @@
 		.halfs {flex : 49%; margin: 1em;}
 	</style>
 
+<p><a href="../examples.html">← back to examples list</a></p>
 <p>
 	Here is a cpu-controller in a playlist context (each sound when finished is launching the next one) with chapters (when you change of sound, its chapters' track and panel are displayer in controller). We hide panels in the players for ease to read.
 </p>
 
 <p>Note : this demo will work best via a webserver, as chapters won't be loaded in a file:/// context</p>
+<h1 id="highlighting-text-amond-chapters">CPU-Audio Interface example : A CPU-Controller with playlists and chapters</h1>
+
 <p>Example shows taken from <a href="https://cpu.dascritch.net/serie/Radio%20num%C3%A9rique">my radio series about DAB+</a></p>
 
 <main>
