--- a/examples/Build_with_download_action.html
+++ b/examples/Build_with_download_action.html
@@ -7,6 +7,9 @@
 <script src="../build/cpu-audio.direct-download.js" async></script>
 
 <body>
+    <p><a href="../examples.html">← back to examples list</a></p>
+    <h1 id="highlighting-text-amond-chapters">CPU-Audio theme example : Direct download instead of action button</h1>
+
     <cpu-audio title="Ex0157 Web, State of the art 2021" canonical="https://cpu.dascritch.net/post/2021/03/11/Ex0157-Web%2C-State-of-the-art-2021" poster="https://cpu.dascritch.net/public/Images/Emissions/.1902-Ex0103-WebStateOfTheArt_s.png" waveform="https://cpu.dascritch.net/public/Sonores/Emissions/waveforms/0157-CPU%2811-03-21%29.png">
         <audio controls="controls" id="emission-0157">
             <source src="https://cpu.dascritch.net/public/Sonores/Emissions/podcast/0157-CPU%2811-03-21%29.mp3" type="audio/mpeg" data-downloadable />
