--- a/examples/Style_backgrounds.html
+++ b/examples/Style_backgrounds.html
@@ -29,7 +29,8 @@
     }
 </style>
 <body>
-
+<p><a href="../examples.html">← back to examples list</a></p>
+<h1 id="highlighting-text-amond-chapters">CPU-Audio Style example : Styling background</h1>
 <div id="example1">
 Perhaps you wish to put a non-solid background to the player&nbsp;? Simply define background variables in any alpha-transparency accepted format.
 
