Adding intention notes about creating themes
Keys ↑ and ↓ mapped onto chapters, then on playlist #108

--- a/examples/Build_with_download_action.html
+++ b/examples/Build_with_download_action.html
@@ -34,6 +34,8 @@
 </p>
 
     <ul>
+        <li>The final build should always stay compact, never upper than 200&nbsp;kb. We always try to have a standard build under 50&nbsp;kb</li>
+        <li>Please be kind : avoid to many elements and classes, check usability with accessibility features.</li>
         <li>As we re-use the same layout, properties and css variables, <a href="../applications/live_config.html">live_config</a> generated configs can be used</li>
         <li>If the first name of the theme is <q>_</q>, it won't be indexed by git. If you want to keep your theme as private, this is the way to do</li>
         <li>If you want to create a public theme, please avoid external dependencies as in CSS frameworks, or use some fallbacks (as we do for fonts)</li>
