--- a/examples/Build_with_download_action.html
+++ b/examples/Build_with_download_action.html
@@ -10,6 +10,8 @@
     <p><a href="../examples.html">← back to examples list</a></p>
     <h1 id="highlighting-text-amond-chapters">CPU-Audio theme example : Direct download instead of action button</h1>
 
+<p>You want to change buttons of position, shape or… whatever ? Want to recreate the Winamp classic 2.x theme or port one of the Audion ones ? Yes you can !</p>
+
     <cpu-audio title="Ex0157 Web, State of the art 2021" canonical="https://cpu.dascritch.net/post/2021/03/11/Ex0157-Web%2C-State-of-the-art-2021" poster="https://cpu.dascritch.net/public/Images/Emissions/.1902-Ex0103-WebStateOfTheArt_s.png" waveform="https://cpu.dascritch.net/public/Sonores/Emissions/waveforms/0157-CPU%2811-03-21%29.png">
         <audio controls="controls" id="emission-0157">
             <source src="https://cpu.dascritch.net/public/Sonores/Emissions/podcast/0157-CPU%2811-03-21%29.mp3" type="audio/mpeg" data-downloadable />
