--- a/examples/Theme_big-square.html
+++ b/examples/Theme_big-square.html
@@ -13,6 +13,7 @@
 <h1 id="highlighting-text-amond-chapters">CPU-Audio Theme example : Big square button, minimalistic</h1>
 
 <p>
+	I've put a 0.1s transition to make it smoother.
 	Small little problem : me must take the click event on the button to the “play or pause” trigger. We have a trigger named "toggleplay", so the whole button got its ID.<br />
 	I just want to add a discreet timeline, not clicable or hoverable.
 </p>
