Invite others to do a better one ;)
Create a big squared theme, with a specific documentation page on theme creation #122

--- a/examples/Theme_big-square.html
+++ b/examples/Theme_big-square.html
@@ -13,9 +13,9 @@
 <h1 id="highlighting-text-amond-chapters">CPU-Audio Theme example : Big square button, minimalistic</h1>
 
 <p>
-	I've put a 0.1s transition to make it smoother.
+	I've put a 0.1s transition to make it smoother. You certainly can do it really better<br />
 	Small little problem : me must take the click event on the button to the “play or pause” trigger. We have a trigger named "toggleplay", so the whole button got its ID.<br />
-	I just want to add a discreet timeline, not clicable or hoverable.
+	I miss to add a discreet timeline, not clickable or hoverable. But it's up to you ;)
 </p>
 
 
