CSS code  clean-up, some vars unused
Create a big squared theme, with a specific documentation page on theme creation #122

--- a/examples/Theme_big-square.html
+++ b/examples/Theme_big-square.html
@@ -9,11 +9,13 @@
 
 <p><a href="../examples.html">← back to examples list</a></p>
 
-<p>Note : this demo will work best via a webserver, as chapters won't be loaded in a file:/// context</p>
 <h1 id="highlighting-text-amond-chapters">CPU-Audio Theme example : Big square button, minimalistic</h1>
 
 <p>
-	I've put a 0.1s transition to make it smoother. You certainly can do it really better<br />
+	This theme has only a button on the whole webcmoponent surface. It is intented to be used as standalone, without cpu-controller, playlists or even chapters.
+</p>
+
+<p>
 	Small little problem : me must take the click event on the button to the “play or pause” trigger. We have a trigger named "toggleplay", so the whole button got its ID.<br />
 	I miss to add a discreet timeline, not clickable or hoverable. But it's up to you ;)
 </p>
