Too many problems with gh-pages, using absolute URL for live config and chaptering applications
Serious rework on gh-pages #135

--- a/applications/live_config.html
+++ b/applications/live_config.html
@@ -75,7 +75,7 @@
 	</label>
 	<p>
 		<span class="what"></span>
-		<label for="is_stream">Is a stream</label> <input id="is_stream" name="is_stream" type="checkbox" value="stream" />, see <a href="./INSTALL.md#special-case-for-live-streamed-media"><i>Special case for live streamed media</i> in <i>INSTALL.md</i></a>. Also check how to <a href="./INSTALL.md#Indicate-a-prefered-downloadable-audio-resource">indicate a prefered downloadable audio resource.</a>
+		<label for="is_stream">Is a stream</label> <input id="is_stream" name="is_stream" type="checkbox" value="stream" />, see <a href="https://github.com/dascritch/cpu-audio/blob/master/INSTALL.md#special-case-for-live-streamed-media"><i>Special case for live streamed media</i> in <i>INSTALL.md</i></a>. Also check how to <a href="https://github.com/dascritch/cpu-audio/blob/master/INSTALL.md#Indicate-a-prefered-downloadable-audio-resource">indicate a prefered downloadable audio resource.</a>
 	</p>
 	<label for="source_vtt">
 		<span>Chapter VTT text file URL</span>
