Aspect in an example. Must create a layout CSS for examples and applications

--- a/examples/controller_playlist_and_chapters.html
+++ b/examples/controller_playlist_and_chapters.html
@@ -7,8 +7,10 @@
 	<script src="../build/cpu-audio.js"></script>
 
 	<style>
-		main {display : flex;   flex-direction:row; }
-		.halfs {flex : 49%; margin: 1em;}
+		@media (min-width: 640px) {
+			main {display : flex;   flex-direction:row; }
+			.halfs {flex : 49%; margin: 1em;}
+		}
 	</style>
 
 <p><a href="../examples.html">← back to examples list</a></p>
