Correcting the svg issue also for alternate theme
Glitches on Safari iOS #138

--- a/src/themes/default/template.html
+++ b/src/themes/default/template.html
@@ -5,7 +5,7 @@
 			<!-- Here are inserted messages from cpu-audio.CPU.updateError(). Perhaps we should hide them at some sizes. And also put an ellipsis in css -->
 		</section>
 		<section id="pagemain">
-			<button type="button" id="control" tabindex="0">
+			<button type="button" id="control" tabindex="0" class="siders">
 				<!-- play / pause / loading -->
 				<svg id="loading" viewBox="0 0 32 32">
 					<title>${__.loading}</title>
@@ -73,7 +73,7 @@
 					<!-- here are inserted tracks for _chapters, cursors,… -->
 				</div>
 			</div>
-			<button id="actions" aria-label="${__.more}" title="${__.more}">
+			<button id="actions" aria-label="${__.more}" title="${__.more}" class="siders">
 				<svg viewBox="0 0 32 32" aria-hidden="true">
 					<circle cx="7" cy="16" r="3" />
 					<circle cx="16" cy="16" r="3" />
