--- a/examples.html
+++ b/examples.html
@@ -7,6 +7,7 @@
 <li><a href='examples/Style_backgrounds.html'>examples/Style_backgrounds.html</a></li>
 <li><a href='examples/Style_highlight_page_chapters.html'>examples/Style_highlight_page_chapters.html</a></li>
 <li><a href='examples/Theme_big-square.html'>examples/Theme_big-square.html</a></li>
+<li><a href='examples/Usage_for_streaming.html'>examples/Usage_for_streaming.html</a></li>
 </ul><h2>Applications</h2><ul>
 <li><a href='applications/chapters_editor.html'>applications/chapters_editor.html</a></li>
 <li><a href='applications/live_config.html'>applications/live_config.html</a></li>
