Removing LIVE.md : to many problems. I'll restyle the web app later
Serious rework on gh-pages #135

--- a/applications/live_config.html
+++ b/applications/live_config.html
@@ -5,6 +5,12 @@
 <p><a href="../examples.html">← back to examples list</a></p>
 <h1>CPU-Audio configuration of the player</h1>
 
+<p>
+	This is a primitive live configurator for CPU-Audio, helping you to tune it for your website. Please note that you should have a browser with webcomponents support to really enjoy it.
+
+	See <a href="https://github.com/dascritch/cpu-audio/blob/master/INSTALL.md">INSTALL.md</a> for explanations on attributes and values.
+</p>
+
 <div id="demo">
 <cpu-audio 
 	title="Choose an URL for source and give it a title">
