file name coherence

--- a/examples/Usage_controller_playlist_and_chapters.html
+++ b/examples/Usage_controller_playlist_and_chapters.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<meta charset="utf-8">
-	<title>CPU-Audio Interface example : A CPU-Controller with playlists and chapters</title>
+	<title>CPU-Audio Usage example : A CPU-Controller with playlists and chapters</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 	<script src="../build/cpu-audio.js"></script>
@@ -19,7 +19,7 @@
 </p>
 
 <p>Note : this demo will work best via a webserver, as chapters won't be loaded in a file:/// context</p>
-<h1 id="highlighting-text-amond-chapters">CPU-Audio Interface example : A CPU-Controller with playlists and chapters</h1>
+<h1>CPU-Audio Interface example : A CPU-Controller with playlists and chapters</h1>
 
 <p>Example shows taken from <a href="https://cpu.dascritch.net/serie/Radio%20num%C3%A9rique">my radio series about DAB+</a></p>
 
